# Velocity-Vortex

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: codeql.yml
Computing-Server/: CMakeLists.txt
DataBroker-Server/include/Fetcher/: DataFetcher.hpp
DataBroker-Server/include/Providers/: Alapca.hpp  Ploygon.hpp  TwelveData.hpp
DataBroker-Server/include/Utilities/: Bar.hpp  Trade.hpp
DataBroker-Server/include/WebSockets/: Sockets.hpp
DataBroker-Server/src/: main.cpp
DataBroker-Server/src/Providers/: Alapca.cpp  Ploygon.cpp  TwelveData.cpp
DataBroker-Server/src/WebSockets/: Sockets.cpp
IO-Server/: AGENTS.md  CMakeLists.txt  report.txt
IO-Server/Schema/: bootstrap.sql
IO-Server/docs/: c4-diagrams.md
IO-Server/include/: Config.h  Redissubscriber.hpp  SQLiteDB.hpp  api_router.hpp  calculation_handler.hpp  calculation_registry.hpp
IO-Server/include/calculations/: mca_handler.hpp  rca_handler.hpp
IO-Server/src/: Redissubscriber.cpp  SQLiteDB.cpp  api_router.cpp  calculation_registry.cpp  main.cpp  subscriber.cpp
IO-Server/src/calculations/: mca_handler.cpp  rca_handler.cpp
Monitoring-Server/: app.py
Monitoring-Server/Front-End/: index.html  package-lock.json  package.json  vite.config.ts
Monitoring-Server/Front-End/src/layouts/main-layout/sidebar/: DrawerItems.tsx
Monitoring-Server/Front-End/src/pages/dashboard/: Dashbaord.tsx
Monitoring-Server/Front-End/src/pages/portfolio/: Portfolio.tsx
Monitoring-Server/Front-End/src/routes/: router.tsx
Monitoring-Server/static/: script.js  style.css
Monitoring-Server/templates/: index.html
include/AlgoEngine-Core/indicator/: Indicator.hpp
include/AlgoEngine-Core/statistical_models/: BayesianKernelRegression.hpp
include/Data-Fetcher-Core/: Websocket.cpp
include/IO-Broker-Core/: RedisDBManager.hpp
include/Order-Manager-Core/: APIClient.hpp
include/Orderbook/: limit_order.hpp  order_book.hpp  order_orderBook.hpp  order_status.hpp  order_tree.hpp  order_type.hpp  transactions.hpp
src/: main.cpp
src/AlgoEngine-Core/statistical models/: BayesianKernelRegression.cpp
src/Data-Fetcher-Core/: DataFetcher.cpp
src/IO-Broker-Core/: RedisDBManager.cpp
src/Orderbook/: limit_order.cpp  order_book.cpp  order_orderBook.cpp  order_status.cpp  order_tree.cpp  order_type.cpp  transactions.cpp
src/Velocity-Bot/: OrderBook-Bot.cpp  bot.cpp
src/Velocity-Bot/strategies/: Reversal-Strategy-Fibonacci-Retracement.cpp  Trend-Following-Strategy.cpp
